------------------------------------------------------------------------
r1395 | dahnke | 2018-11-21 16:25:20

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_main_cleanup.m
M       cat_surf_createCS.m
M       cat_surf_render2.m

(1) Fixed:     Modified cat_main_cleanup routine to avoid local cuts into the brain.
------------------------------------------------------------------------
r1394 | dahnke | 2018-11-20 10:19:37 +0100 (Di, 20 Nov 2018) | 11 lines

Changed paths:
M       CHANGES.txt
M       cat_main_kamap.m
M       cat_main_registration.m
M       cat_surf_createCS.m

(1) Changed:    Worked on problems in the kamap pipeline. 
(2) Fixed:      Corrected bug in Shooting call due to SPM update.
(3) Fixed:      Suppressed MATLAB:subscripting:noSubscriptsSpecified
                warning created in GIFTI output routine (gifti/subsref:45).

------------------------------------------------------------------------
r1393 | dahnke | 2018-11-19 09:36:43 +0100 (Mo, 19 Nov 2018) | 20 lines

Changed paths:
M       CHANGES.txt
M       batches/cattest/cat12_101_MAIN_segment.m
A       batches/cattest/cat12_105_MAIN_segment_1173plus.m
A       batches/cattest/cat12_106_MAIN_segment_1173.m
M       batches/cattest/cat12_308_SBM_Surf2ROI.m
M       cat_conf_opts.m
M       cat_main.m
M       cat_main_kamap.m
M       cat_main_registration.m
M       cat_main_updateWMHs.m
M       cat_run1173plus/cat_conf_extopts1173plus.m
M       cat_run1173plus/cat_run_job1173plus.m
M       cat_tst_cattest.m
M       tbx_cfg_cat.m

(1) Fixed:   Corrected small bugs in cat_main and batch generation. 
(2) Fixed:   Updated cat_tst_cattest and batches for current cat version.


------------------------------------------------------------------------
r1392 | gaser | 2018-11-15 21:24:07 +0100 (Do, 15 Nov 2018) | 25 lines

Changed paths:
M       CAT12-Manual.docx
M       CHANGES.txt
M       cat_conf_tools.m
MM      cat_main_APRG.m
MM      cat_main_kamap.m