@@ -19,7 +19,8 @@ cat.opts.tpm       = {fullfile(spm('dir'),'tpm','TPM.nii')};
 cat.opts.ngaus     = [1 1 2 3 4 2];           % Gaussians per class (SPM12 default = [1 1 2 3 4 2]) - alternative: [3 3 2 3 4 2] 
 cat.opts.affreg    = 'mni';                   % Affine regularisation (SPM12 default = mni) - '';'mni';'eastern';'subj';'none';'rigid'
 cat.opts.warpreg   = [0 0.001 0.5 0.05 0.2];  % Warping regularisation (SPM12 default) - no useful modification found
-cat.opts.tol       = 1e-4;                   % SPM preprocesseing accuracy (CAT only!) - 1e-2 very low accuracy (fast); 1e-4 default; 1e-6 very low accuracy (slow)
+cat.opts.tol       = 1e-4;                    % SPM preprocesseing accuracy (CAT only!) - 1e-2 very low accuracy (fast); 1e-4 default; 1e-6 very high accuracy (slow)
+cat.opts.accstr    = 0.5;                     % SPM preprocesseing accuracy (CAT only!) - 0 very low accuracy (fast) .. 1 very high accuracy (slow); default = 0.5
 cat.opts.biasstr   = 0.5;                     % Strength of the bias correction that controls the biasreg and biasfwhm parameter (CAT only!)
                                               %   0 - use SPM parameter; eps - ultralight, 0.25 - light, 0.5 - medium, 0.75 - strong, and 1 - heavy corrections
                                               %   job.opts.biasreg	= min(  10 , max(  0 , 10^-(job.opts.biasstr*2 + 2) ));
