@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1395 | dahnke | 2018-11-21 16:25:20
+r1396 | dahnke | 2018-11-28 12:35:19
+
+Changed paths:
+M       CHANGES.txt
+M       cat_conf_opts.m
+M       cat_defaults.m
+M       cat_run.m
+
+(1) New:    Added SPM accuracy parameter in GUI and cat_defaults.
+------------------------------------------------------------------------
+r1395 | dahnke | 2018-11-21 16:25:23 +0100 (Mi, 21 Nov 2018) | 9 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -9,6 +19,7 @@ M       cat_surf_createCS.m
 M       cat_surf_render2.m
 
 (1) Fixed:     Modified cat_main_cleanup routine to avoid local cuts into the brain.
+
 ------------------------------------------------------------------------
 r1394 | dahnke | 2018-11-20 10:19:37 +0100 (Di, 20 Nov 2018) | 11 lines
 
